--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="intro-container">
-        <div class="intro-text" align="center">AKG <br> SMART METER</div>
+        <div class="intro-text" align="center">AKG <br> Website</div>
     </div>
 
     <div class="login-container">
