Change title and script source in dashboard.html

--- a/dashboard.html
+++ b/dashboard.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="ribbon"> 
-       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;   AKG SMART METER <span class="timer" id="timer">02:00</span>
+       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;   AKG Website <span class="timer" id="timer">02:00</span>
     </div>
 
     <div class="dashboard">
@@ -30,7 +30,7 @@
             <button id="openMenu" class="menu-toggle open" aria-label="Open menu">☰</button>
             <div class="embedded-form">
                 <!-- Caspio form embedded script -->
-                <script type="text/javascript" src="https://c3dcv336.caspio.com/dp/3780E00058c9f63b37344de0ac75/emb"></script>
+                <script type="text/javascript" src="https://github.com/aditya-gupta-andc"></script>
             </div>
         </main>
     </div>
